--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-toastify": "^9.1.3",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "use-color-thief": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
